Fixed unaligned right div border with header

--- a/styles/styling.css
+++ b/styles/styling.css
@@ -7,6 +7,7 @@
   position: static;
   /* display: flex; */
   justify-content: center;
+  margin: 30px;
 }
 
 body {
